# playground

./: .pre-commit-config.yaml  Makefile  pyproject.toml  tasks.py  test.py
.github/workflows/: wf.yaml
tests/unit/: test_happy_path.py
