[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["Pawel Fraczek <pawelfraczek@o2.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pandas = "^2.1.4"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


