[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["Pawel Fraczek <pawelfraczek@o2.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
invoke = "^2.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
